--- a/html/presentations.html
+++ b/html/presentations.html
@@ -105,6 +105,7 @@
                 <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                   <div class="panel-body">
                     <iframe id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" width="100%" height="550" src="../documents/presentacion1.pdf"></iframe>
+                    <a class="btn btn-primary" href="../documents/presentacion1.pdf" download>Descargar presentacion 1 PDF</a>
                   </div>
                 </div>
               </div>
