Mejora en las imagenes,iframe responsive y boton de descarga

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ id nibh ultricies vehicula ut id elit.</p>
           <p class="lead">Evaluar financieramente la instalación de una fuente de energía eléctrica renovable y eficiente en la vereda Llanogrande, Dabeiba, Antioquia; donde se instalará una zona de concentración de las Farc, en el marco del posible posconflicto.</p>
         </div>
         <div class="col-md-5">
-          <img data-holder-rendered="true" src="images/carousel3.jpg" class="featurette-image img-responsive center-block"  alt="500x500">
+          <img data-holder-rendered="true" src="images/carousel3.jpg" class="featurette-image img-responsive img-thumbnail center-block" style="border: 1px solid;" alt="500x500">
         </div>
       </div>
 
@@ -201,7 +201,7 @@ id nibh ultricies vehicula ut id elit.</p>
              </ul>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img data-holder-rendered="true" src="images/carousel2.jpg" style="heigth=500px;margin-top:150px;" class="featurette-image img-responsive center-block"  alt="500x500">
+          <img data-holder-rendered="true" src="images/carousel2.jpg" style="margin-top:150px; border: 1px solid;" class="featurette-image img-responsive img-thumbnail center-block"  alt="500x500">
         </div>
       </div>
 
@@ -213,7 +213,7 @@ id nibh ultricies vehicula ut id elit.</p>
           <p class="lead">En el marco de los acuerdos pactados por el gobierno y la guerrilla de las Farc se hace necesario el establecimiento de las zonas de concentración para la entrega de las armas y la desmovilización. Estas zonas deben contar con el suplimiento de las necesidades básicas de una población, una de ellas es la energía eléctrica necesaria para el desarrollo de la sociedad.</p>
         </div>
         <div class="col-md-5">
-          <img data-holder-rendered="true" src="images/carousel5.jpg" style="heigth=500px;" class="featurette-image img-responsive center-block"  alt="500x500">
+          <img data-holder-rendered="true" src="images/carousel5.jpg" style="border: 1px solid;" class="featurette-image img-responsive img-thumbnail center-block"  alt="500x500">
         </div>
       </div>
 
