Correccion logo pestaña

--- a/html/about.html
+++ b/html/about.html
@@ -11,7 +11,7 @@
     <!-- Normalize a web page -->
 <link rel="stylesheet" type="text/css" href="../css/normalize.css" media="screen">
     <!-- Title and logo -->
-    <link href='images/logo.png' rel='shortcut icon' type='image/png'>
+    <link href='../images/logo.png' rel='shortcut icon' type='image/png'>
     <title>EnergyPAZ s.a.s</title>
 
     <!-- Bootstrap core CSS -->
