--- a/html/about.html
+++ b/html/about.html
@@ -59,19 +59,19 @@
             </div>
             <div style="height: 1px;" aria-expanded="false" id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="../index.html">Home</a></li>
-                <li class="active"><a href="#about">About</a></li>
-                <li><a href="../html/presentations.html">Presentations</a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li class="active"><a href="#about">Integrantes</a></li>
+                <li><a href="../html/presentations.html">Presentaciones</a></li>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Analisis <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li class="dropdown-header">Nav header</li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
+                    <li><a href="marcolegal.html">Estudio legal</a></li>
+                    <li><a href="estudioambiental.html">Estudio ambiental</a></li>
+                    <li><a href="estudioorganizacional.html">Estudio organizacional</a></li>
+                    <li><a href="estudiotecnico.html">Estudio técnico</a></li>
+                    <li><a href="metodosalt.html">Metodos alternativos</a></li>
+                    <li><a href="estudiomercado.html">Estudio de mercado</a></li>
+                    <li><a href="estructuracostos.html">Estructura de costos</a></li>
                   </ul>
                 </li>
               </ul>
