--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
             </div>
             <div style="height: 1px;" aria-expanded="false" id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="">Home</a></li>
-                <li><a href="html/about.html">About</a></li>
-                <li><a href="html/presentations.html">Presentations</a></li>
+                <li class="active"><a href="">Inicio</a></li>
+                <li><a href="html/about.html">Integrantes</a></li>
+                <li><a href="html/presentations.html">Presentaciones</a></li>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Analisis <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li class="dropdown-header">Nav header</li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
+                    <li><a href="html/marcolegal.html">Estudio legal</a></li>
+                    <li><a href="html/estudioambiental.html">Estudio ambiental</a></li>
+                    <li><a href="html/estudioorganizacional.html">Estudio organizacional</a></li>
+                    <li><a href="html/estudiotecnico.html">Estudio técnico</a></li>
+                    <li><a href="html/metodosalt.html">Metodos alternativos</a></li>
+                    <li><a href="html/estudiomercado.html">Estudio de mercado</a></li>
+                    <li><a href="html/estructuracostos.html">Estructura de costos</a></li>
                   </ul>
                 </li>
               </ul>
@@ -95,65 +95,20 @@
         <li class="" data-target="#myCarousel" data-slide-to="4"></li>
       </ol>
       <div class="carousel-inner" role="listbox">
-        <div class="item">
-          <img class="first-slide" src="images/carousel.jpg" alt="First slide" style="width: 100%;">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Example headline.</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code>
- URL, the "next" and "previous" Glyphicon buttons on the left and right 
-might not load/display properly due to web browser security rules.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-            </div>
-          </div>
-        </div>
         <div class="item active">
           <img class="second-slide" src="images/carousel2.jpg" alt="Second slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget 
-quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor 
-id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-            </div>
-          </div>
         </div>
         <div class="item">
           <img class="third-slide" src="images/carousel3.jpg" alt="Third slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget 
-quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor 
-id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-            </div>
-          </div>
         </div>
         <div class="item">
-          <img class="fourth-slide" src="images/carousel4.jpg" alt="Third slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget 
-quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor 
-id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-            </div>
-          </div>
+          <img class="fourth-slide" src="images/alt4.jpg" alt="Third slide">
         </div>
         <div class="item">
-          <img class="fiveth-slide" src="images/carousel5.jpg" alt="Third slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget 
-quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor 
-id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-            </div>
-          </div>
+          <img class="first-slide" src="images/alt1.jpg" alt="First slide" style="width: 100%;">
+        </div>
+        <div class="item">
+          <img class="fiveth-slide" src="images/alt5.jpg" alt="Third slide">
         </div>
       </div>
       <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
