--- a/html/marcolegal.html
+++ b/html/marcolegal.html
@@ -63,7 +63,7 @@
                 <li><a href="about.html">Integrantes</a></li>
                 <li><a href="presentations.html">Presentaciones</a></li>
                 <li class="dropdown active">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Analisis <span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Formulación <span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li  class="active"><a href="marcolegal.html">Estudio legal</a></li>
                     <li><a href="estudioambiental.html">Estudio ambiental</a></li>
