--- a/html/about.html
+++ b/html/about.html
@@ -63,7 +63,7 @@
                 <li class="active"><a href="#about">Integrantes</a></li>
                 <li><a href="../html/presentations.html">Presentaciones</a></li>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Analisis <span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Formulación <span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><a href="marcolegal.html">Estudio legal</a></li>
                     <li><a href="estudioambiental.html">Estudio ambiental</a></li>
