--- a/html/estudioambiental.html
+++ b/html/estudioambiental.html
@@ -67,15 +67,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="../index.html"><i class="fa fa-bolt" style="color:white; margin-right:10px;" aria-hidden="true"></i>EnergyPAZ</a>
+              <a class="navbar-brand" href="../index.html"><i class="fa fa-bolt" style=" color: #FFFF00; margin-right:10px;" aria-hidden="true"></i>EnergyPAZ</a>
             </div>
             <div style="height: 1px;" aria-expanded="false" id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="about.html">Integrantes</a></li>
-                <li><a href="presentations.html">Presentaciones</a></li>
+                <li><a href="../index.html"> <i class="fa fa-home" aria-hidden="true"></i> Inicio</a></li>
+                <li><a href="about.html"> <i class="fa fa-users" aria-hidden="true"></i> Integrantes</a></li>
+                <li><a href="presentations.html"> <i class="fa fa-television" aria-hidden="true"></i> Presentaciones </a></li>
                 <li class="dropdown active">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Formulación <span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-list" aria-hidden="true"></i> Formulación <span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><a href="marcolegal.html">Estudio legal</a></li>
                     <li class="active"><a href="estudioambiental.html">Estudio ambiental</a></li>
@@ -108,8 +108,8 @@
             <h1 class="featurette-heading">Estudio ambiental.<!--<span class="text-muted">Checkmate.</span>--></h1><br>
             <h2><b>Impacto ambiental.</b></h2><br>
             <p class="lead">Las fuentes de energía renovables contra los combustibles fósiles, constituyen fuentes prácticamente inagotables además de que son poco dañinas para el medio ambiente <b>[1]</b>.</p>
-            <p class="lead">La generación de energía eléctrica a partir de la energía solar al no usar ningún tipo de combustión no produce emisiones de gases contaminantes y es silenciosa, lo que representa una clara ventaja frente a otras fuentes de generación de energía no convencionales. Aunque podría presentarse un efecto de contaminación visual sobre el paisaje, giaulmente puede afectar el suelo, la fauna y flora de la zona.</p>
-            <p class="lead">los sistemas fotovoltaicos sólo generan contaminación durante las distintas etapas de fabricación de los componentes del sistema. La energía invertida en el tiempo de producción es siempre recuperable según <b>[2]</b>, para un plazo de 2 - 3 años ya se ha recuperado la energía que es significativamente menor a la vida útil del sistema fotovoltaico que es más de 25 años. </p>
+            <p class="lead">La generación de energía eléctrica a partir de la energía solar al no usar ningún tipo de combustión no produce emisiones de gases contaminantes y es silenciosa, lo que representa una clara ventaja frente a otras fuentes de generación de energía no convencionales. Aunque podría presentarse un efecto de contaminación visual sobre el paisaje, igualmente puede afectar el suelo, la fauna y flora de la zona.</p>
+            <p class="lead">los sistemas fotovoltaicos sólo generan contaminación durante las distintas etapas de fabricación de los componentes del sistema. La energía invertida en el tiempo de producción es siempre recuperable <b>[2]</b>, para un plazo de 2 - 3 años ya se ha recuperado la energía que es significativamente menor a la vida útil del sistema fotovoltaico que es más de 25 años. </p>
         </div>
       </div><!-- /.row -->
       
