--- a/html/about.html
+++ b/html/about.html
@@ -55,15 +55,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="../index.html"><i class="fa fa-bolt" style="color:white; margin-right:10px;" aria-hidden="true"></i>EnergyPAZ</a>
+              <a class="navbar-brand" href="../index.html"><i class="fa fa-bolt" style=" color: #FFFF00; margin-right:10px;" aria-hidden="true"></i>EnergyPAZ</a>
             </div>
             <div style="height: 1px;" aria-expanded="false" id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="../index.html">Inicio</a></li>
-                <li class="active"><a href="#about">Integrantes</a></li>
-                <li><a href="../html/presentations.html">Presentaciones</a></li>
+                <li><a href="../index.html"> <i class="fa fa-home" aria-hidden="true"></i> Inicio</a></li>
+                <li class="active"><a href="#about"> <i class="fa fa-users" aria-hidden="true"></i> Integrantes</a></li>
+                <li><a href="../html/presentations.html"> <i class="fa fa-television" aria-hidden="true"></i> Presentaciones </a></li>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Formulación <span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-list" aria-hidden="true"></i> Formulación <span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><a href="marcolegal.html">Estudio legal</a></li>
                     <li><a href="estudioambiental.html">Estudio ambiental</a></li>
