--- a/index.html
+++ b/index.html
@@ -55,16 +55,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href=""><i class="fa fa-bolt" style="color:white; margin-right:10px;" aria-hidden="true"></i>EnergyPAZ</a>
+              <a class="navbar-brand" href=""><i class="fa fa-bolt" style=" color: #FFFF00; margin-right:10px;" aria-hidden="true"></i>EnergyPAZ</a>
             </div>
             <div style="height: 1px;" aria-expanded="false" id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="">Inicio</a></li>
-                <li><a href="html/about.html">Integrantes</a></li>
-                <li><a href="html/presentations.html">Presentaciones</a></li>
+                <li class="active"><a href=""> <i class="fa fa-home" aria-hidden="true"></i> Inicio</a></li>
+                <li><a href="html/about.html"> <i class="fa fa-users" aria-hidden="true"></i> Integrantes</a></li>
+                <li><a href="html/presentations.html"> <i class="fa fa-television" aria-hidden="true"></i> Presentaciones </a></li>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Formulación <span class="caret"></span></a>
-                  <ul class="dropdown-menu">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                  <i class="fa fa-list" aria-hidden="true"></i> Formulación <span class="caret"></span></a>
+                 <ul class="dropdown-menu">
                     <li><a href="html/marcolegal.html">Estudio legal</a></li>
                     <li><a href="html/estudioambiental.html">Estudio ambiental</a></li>
                     <li><a href="html/estudioorganizacional.html">Estudio organizacional</a></li>
@@ -75,6 +76,19 @@
                   </ul>
                 </li>
               </ul>
+              
+              <ul class="nav navbar-nav navbar-right">
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                      Divisas <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a href="#"> <p style="font-size:20px;"> <i class="fa fa-usd" style="color:green;" aria-hidden="true"></i> 2.956,58 <i class="fa fa-arrow-up" style="color:green;"aria-hidden="true"></i></p> </a></li>
+                      <li><a href="#"> <p style="font-size:20px;"> <i class="fa fa-eur" style="color:red;" aria-hidden="true"></i> 3.278,00 <i class="fa fa-arrow-down" style="color:red;"aria-hidden="true"></i></p> </a></li>
+                      <li><a href="#"> <p style="font-size:20px;"> <i class="fa fa-gbp" style="color:red;" aria-hidden="true"></i> 3.844,15 <i class="fa fa-arrow-down" style="color:red;"aria-hidden="true"></i></p> </a></li>
+                    </ul>
+                  </li>
+                </ul>
             </div>
           </div>
         </nav>
