--- a/html/estructuracostos.html
+++ b/html/estructuracostos.html
@@ -86,6 +86,14 @@
                     <li class="active"><a href="estructuracostos.html">Estructura de costos</a></li>
                   </ul>
                 </li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                  <i class="fa fa-line-chart" aria-hidden="true"></i> Evaluación financiera <span class="caret"></span></a>
+                 <ul class="dropdown-menu">
+                    <li><a href="flujofondos.html">Flujo de fondos puro</a></li>
+                    <li><a href="flujofondosf.html">Flujo de fondos financiado</a></li>
+                  </ul>
+                </li>
               </ul>
             </div>
           </div>
@@ -106,11 +114,11 @@
       <div class="row featurette">
         <div class="col-sm-10 col-md-offset-1" >
             <h1 class="featurette-heading">Estructura de costos.<!--<span class="text-muted">Checkmate.</span>--></h1><br>
-            <p class="lead">La estructura de costos del proyecto se conforma en un 94,32% por costos de inversión, es decir: planeación y ejecución, equipos, mano de obra y maquinaria de alquiler para verificación y apoyo. Un 5,68% en costos directos de operación, que agrupa al mantenimiento.</p>
+            <p class="lead">La estructura de costos del proyecto se conforma en un 80,99% por costos de inversión, es decir: planeación y ejecución, equipos, mano de obra y maquinaria de alquiler para verificación y apoyo. Un 19,01% en costos directos de operación, que agrupa al mantenimiento.</p>
         </div>
       </div><!-- /.row -->
     
-    <!-- Three columns of text below the carousel -->
+    <!-- Three columns of text below the carousel 
       <div class="row featurette">
         <div class="col-sm-10 col-md-offset-1" >
             <div class="table-responsive">
@@ -450,8 +458,13 @@
               <em>Tabla 1 <b>[1]</b></em>
             </div>
         </div>
-      </div><!-- /.row -->
-    
+      </div>--><!-- /.row -->
+
+  <div class="row">
+      <div class="col-sm-10 col-md-offset-1" >
+        <img src="../images/costos.png" alt="costos">
+      </div>
+  </div>
     <div class="row">
         <div class="col-sm-10 col-md-offset-1" >
             <h2><b>Referencias:</b></h2>
