--- a/html/estudioambiental.html
+++ b/html/estudioambiental.html
@@ -86,6 +86,14 @@
                     <li><a href="estructuracostos.html">Estructura de costos</a></li>
                   </ul>
                 </li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                  <i class="fa fa-line-chart" aria-hidden="true"></i> Evaluación financiera <span class="caret"></span></a>
+                 <ul class="dropdown-menu">
+                    <li><a href="flujofondos.html">Flujo de fondos puro</a></li>
+                    <li><a href="flujofondosf.html">Flujo de fondos financiado</a></li>
+                  </ul>
+                </li>
               </ul>
             </div>
           </div>
@@ -251,82 +259,82 @@
                   <tr>
                     <th rowspan="2" scope="row" style="text-align:center; vertical-align:middle;" class="active">Aire</th>
                     <th style="text-align:center" class="active">Calidad</th>
-                    <td style="text-align:center">A</td>
-                    <td style="text-align:center">A</td>
-                    <td style="text-align:center">A</td>
+                    <td style="text-align:center">Aceptable</td>
+                    <td style="text-align:center">Aceptable</td>
+                    <td style="text-align:center">Aceptable</td>
                   </tr>
                   <tr>
                     <th style="text-align:center" class="active">Ruido</th>
-                    <td style="text-align:center">I</td>
-                    <td style="text-align:center">A</td>
-                    <td style="text-align:center">A</td>
+                    <td style="text-align:center">Inaceptable</td>
+                    <td style="text-align:center">Aceptable</td>
+                    <td style="text-align:center">Aceptable</td>
                   </tr>
                   <tr>
                     <th rowspan="2" scope="row" style="text-align:center; vertical-align:middle;" class="active">Agua</th>
                     <th style="text-align:center" class="active">Calidad</th>
-                    <td style="text-align:center">A</td>
-                    <td style="text-align:center">A</td>
-                    <td style="text-align:center">A</td>
+                    <td style="text-align:center">Aceptable</td>
+                    <td style="text-align:center">Aceptable</td>
+                    <td style="text-align:center">Aceptable</td>
                   </tr>
                   <tr>
                     <th style="text-align:center" class="active">Cantidad</th>
-                    <td style="text-align:center">A</td>
-                    <td style="text-align:center">A</td>
-                    <td style="text-align:center">A</td>
+                    <td style="text-align:center">Aceptable</td>
+                    <td style="text-align:center">Aceptable</td>
+                    <td style="text-align:center">Aceptable</td>
                   </tr>
                   <tr>
                     <th rowspan="2" scope="row" style="text-align:center; vertical-align:middle;" class="active">Suelo</th>
                     <th style="text-align:center" class="active">Erosión</th>
-                    <td style="text-align:center">A</td>
-                    <td style="text-align:center">A</td>
-                    <td style="text-align:center">A</td>
+                    <td style="text-align:center">Aceptable</td>
+                    <td style="text-align:center">Aceptable</td>
+                    <td style="text-align:center">Aceptable</td>
                   </tr>
                   <tr>
                     <th style="text-align:center" class="active">Productividad</th>
-                    <td style="text-align:center">I</td>
-                    <td style="text-align:center">A</td>
-                    <td style="text-align:center">I</td>
+                    <td style="text-align:center">Inaceptable</td>
+                    <td style="text-align:center">Inaceptable</td>
+                    <td style="text-align:center">Inaceptable</td>
                   </tr>
                   <tr>
                     <th style="text-align:center" class="active">Flora</th>
                     <th style="text-align:center" class="active">Abundancia</th>
-                    <td style="text-align:center">I</td>
-                    <td style="text-align:center">A</td>
-                    <td style="text-align:center">A</td>
+                    <td style="text-align:center">Inaceptable</td>
+                    <td style="text-align:center">Aceptable</td>
+                    <td style="text-align:center">Aceptable</td>
                   </tr>
                   <tr>
                     <th style="text-align:center" class="active">Fauna</th>
                     <th style="text-align:center" class="active">Abundancia</th>
-                    <td style="text-align:center">I</td>
-                    <td style="text-align:center">A</td>
-                    <td style="text-align:center">A</td>
+                    <td style="text-align:center">Inaceptable</td>
+                    <td style="text-align:center">Aceptable</td>
+                    <td style="text-align:center">Aceptable</td>
                   </tr>
                   <tr>
                     <th style="text-align:center" class="active">Paisaje</th>
                     <th style="text-align:center" class="active">Visual</th>
-                    <td style="text-align:center">I</td>
-                    <td style="text-align:center">I</td>
-                    <td style="text-align:center">I</td>
+                    <td style="text-align:center">Inaceptable</td>
+                    <td style="text-align:center">Inaceptable</td>
+                    <td style="text-align:center">Inaceptable</td>
                   </tr>
                   <tr>
                     <th rowspan="2" scope="row" style="text-align:center; vertical-align:middle;" class="active">Población</th>
                     <th style="text-align:center" class="active">Relocalización</th>
-                    <td style="text-align:center">A</td>
-                    <td style="text-align:center">A</td>
-                    <td style="text-align:center">A</td>
+                    <td style="text-align:center">Aceptable</td>
+                    <td style="text-align:center">Aceptable</td>
+                    <td style="text-align:center">Aceptable</td>
                   </tr>
                   <tr>
                     <th style="text-align:center" class="active">Costumbres</th>
-                    <td style="text-align:center">A</td>
-                    <td style="text-align:center">A</td>
-                    <td style="text-align:center">A</td>
+                    <td style="text-align:center">Aceptable</td>
+                    <td style="text-align:center">Aceptable</td>
+                    <td style="text-align:center">Aceptable</td>
                   </tr>
                   <tr>
                     <th style="text-align:center" class="active">Otros</th>
                     <th style="text-align:center" class="active">Ecosistemas</th>
-                    <td style="text-align:center">I</td>
-                    <td style="text-align:center">A</td>
-                    <td style="text-align:center">I</td>
+                    <td style="text-align:center">Inaceptable</td>
+                    <td style="text-align:center">Inaceptable</td>
+                    <td style="text-align:center">Inaceptable</td>
                   </tr>
               </table>
               <em>Tabla 2: Adaptada de [4]</em>
