--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
                     <li><a href="html/estructuracostos.html">Estructura de costos</a></li>
                   </ul>
                 </li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                  <i class="fa fa-line-chart" aria-hidden="true"></i> Evaluación financiera <span class="caret"></span></a>
+                 <ul class="dropdown-menu">
+                    <li><a href="html/flujofondos.html">Flujo de fondos puro</a></li>
+                    <li><a href="html/flujofondosf.html">Flujo de fondos financiado</a></li>
+                  </ul>
+                </li>
               </ul>
               
               <ul class="nav navbar-nav navbar-right">
@@ -83,9 +91,9 @@
                       Divisas <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a href="#"> <p style="font-size:20px;"> <i class="fa fa-usd" style="color:green;" aria-hidden="true"></i> 2.956,58 <i class="fa fa-arrow-up" style="color:green;"aria-hidden="true"></i></p> </a></li>
-                      <li><a href="#"> <p style="font-size:20px;"> <i class="fa fa-eur" style="color:red;" aria-hidden="true"></i> 3.278,00 <i class="fa fa-arrow-down" style="color:red;"aria-hidden="true"></i></p> </a></li>
-                      <li><a href="#"> <p style="font-size:20px;"> <i class="fa fa-gbp" style="color:red;" aria-hidden="true"></i> 3.844,15 <i class="fa fa-arrow-down" style="color:red;"aria-hidden="true"></i></p> </a></li>
+                      <li><a href="#"> <p style="font-size:20px;"> <i class="fa fa-usd" style="color:green;" aria-hidden="true"></i> 2.917,95 <i class="fa fa-arrow-up" style="color:green;"aria-hidden="true"></i></p> </a></li>
+                      <li><a href="#"> <p style="font-size:20px;"> <i class="fa fa-eur" style="color:green;" aria-hidden="true"></i> 3.279,00 <i class="fa fa-arrow-up" style="color:green;"aria-hidden="true"></i></p> </a></li>
+                      <li><a href="#"> <p style="font-size:20px;"> <i class="fa fa-gbp" style="color:green;" aria-hidden="true"></i> 3.783,41 <i class="fa fa-arrow-down" style="color:green;"aria-hidden="true"></i></p> </a></li>
                     </ul>
                   </li>
                 </ul>
