--- a/html/estudiomercado.html
+++ b/html/estudiomercado.html
@@ -86,6 +86,14 @@
                     <li><a href="estructuracostos.html">Estructura de costos</a></li>
                   </ul>
                 </li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                  <i class="fa fa-line-chart" aria-hidden="true"></i> Evaluación financiera <span class="caret"></span></a>
+                 <ul class="dropdown-menu">
+                    <li><a href="flujofondos.html">Flujo de fondos puro</a></li>
+                    <li><a href="flujofondosf.html">Flujo de fondos financiado</a></li>
+                  </ul>
+                </li>
               </ul>
             </div>
           </div>
