--- a/html/presentations.html
+++ b/html/presentations.html
@@ -61,7 +61,7 @@
               <ul class="nav navbar-nav">
                 <li><a href="../index.html"> <i class="fa fa-home" aria-hidden="true"></i> Inicio</a></li>
                 <li><a href="about.html"> <i class="fa fa-users" aria-hidden="true"></i> Integrantes</a></li>
-                <li class="active"><a href=""> <i class="fa fa-television" aria-hidden="true"></i> Presentaciones </a></li>
+                <li class="active"><a href=""> <i class="fa fa-television" aria-hidden="true"></i> Poster y Presentaciones</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-list" aria-hidden="true"></i> Formulación <span class="caret"></span></a>
                   <ul class="dropdown-menu">
@@ -106,14 +106,14 @@
                 <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                 <div class="panel-heading" role="tab" id="headingOne">
                   <h4 class="panel-title">
-                      Presentación 1
+                      Poster
                   </h4>
                 </div>
                  </a>
                 <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                   <div class="panel-body">
-                    <iframe id="iframe_container" class="embed-responsive-item col-sm-12 col-xs-12" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" width="100%" height="550" src="../documents/presentacion1.pdf"></iframe>
-                    <a class="btn btn-primary" style="margin:5px; margin-left:15px;" href="../documents/presentacion1.pdf" download>Descargar presentacion 1 PDF</a>
+                    <iframe id="iframe_container" class="embed-responsive-item col-sm-12 col-xs-12" frameborder="0"   width="550" height="550" src="../documents/Poster.pdf" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe>
+                    <a class="btn btn-primary" style="margin:5px; margin-left:15px;" href="../documents/Poster.pptx" download>Descargar poster power point</a><a class="btn btn-primary" style="margin:5px; margin-left:15px;" href="../documents/Poster.pdf" download>Descargar poster pdf</a>
                   </div>
                 </div>
               </div>
@@ -121,13 +121,14 @@
                 <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                 <div class="panel-heading" role="tab" id="headingTwo">
                   <h4 class="panel-title">
-                      Presentación 2
+                      Presentación 1
                   </h4>
                 </div>
                 </a>
                 <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                   <div class="panel-body">
-                    <!-- Content of panel -->
+                    <iframe id="iframe_container" class="embed-responsive-item col-sm-12 col-xs-12" frameborder="0"   width="550" height="550" src="../documents/presentacion1.pdf" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe>
+                    <a class="btn btn-primary" style="margin:5px; margin-left:15px;" href="../documents/presentacion1.pdf" download>Descargar presentacion 1 PDF</a>
                   </div>
                 </div>
               </div>
