--- a/html/marcolegal.html
+++ b/html/marcolegal.html
@@ -61,7 +61,7 @@
               <ul class="nav navbar-nav">
                 <li><a href="../index.html"> <i class="fa fa-home" aria-hidden="true"></i> Inicio</a></li>
                 <li><a href="about.html"> <i class="fa fa-users" aria-hidden="true"></i> Integrantes</a></li>
-                <li><a href="presentations.html"> <i class="fa fa-television" aria-hidden="true"></i> Presentaciones </a></li>
+                <li><a href="presentations.html"> <i class="fa fa-television" aria-hidden="true"></i> Poster & presentaciones </a></li>
                 <li class="dropdown active">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-list" aria-hidden="true"></i> Formulación <span class="caret"></span></a>
                   <ul class="dropdown-menu">
