--- a/html/estudiotecnico.html
+++ b/html/estudiotecnico.html
@@ -445,7 +445,7 @@
                         </li>
                         <li><p class="lead">Pérdidas por incremento de temperatura de las células fotovoltaicas.</p>
                         <ul>
-                            <li><p class="lead">El rendimiento de los módulos fotovoltaicos disminuye con el incremento de la temperatura a la que se encuentra la superficie del panel. Al ser un elemento expuesto a la radiación solar de manera continuada es necesario que exista una buena ventilación tanto por la superficie expuesta al sol como por la parte posterior de los módulos. No obstante, incluso con buena ventilación, se produce un incremento de temperatura de la superficie de los módulos con respecto a la temperatura ambiente exterior.</p>
+                            <li><p class="lead">El rendimiento de los módulos fotovoltaicos disminuye con el incremento de la temperatura a la que se encuentra la superficie del panel. Al ser un elemento expuesto a la radiación solar de manera continua es necesario que exista una buena ventilación tanto por la superficie expuesta al sol como por la parte posterior de los módulos. No obstante, incluso con buena ventilación, se produce un incremento de temperatura de la superficie de los módulos con respecto a la temperatura ambiente exterior.</p>
                             <p class="lead">Para el cálculo del factor que considera las pérdidas por incremento de la temperatura del panel (P<sub>T</sub>), se suele emplear la siguiente expresión:</p>
                             <div class="eq-c" style="font-size:20px;">
                                 <i>P<sub>T</sub></i> = 
