--- a/html/flujofondosf.html
+++ b/html/flujofondosf.html
@@ -461,7 +461,7 @@
                     <td style="text-align:center">$ -</td>
                   </tr>
                   <tr class="warning">
-                    <th><i class="fa fa-plus-circle" aria-hidden="true"></i>Creditos recibidos</th>
+                    <th><i class="fa fa-plus-circle" aria-hidden="true"></i>Créditos recibidos</th>
                     <td style="text-align:center">$ 1.926.244.828,80</td>
                     <td style="text-align:center">$ -</td>
                     <td style="text-align:center">$ -</td>
@@ -520,9 +520,9 @@
     </div>
       <br><br>
         <p class="lead"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Siendo: <br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;F<sub>i</sub> : El flujo de fondos en el periodo i<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;n : El número de periodos <br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I : La inversión inicial<br></p>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;F<sub>i</sub> : Flujo de fondos en el periodo i<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;n : Número de periodos <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I : Inversión inicial<br></p>
        <hr class="featurette-divider">
         <h2><b>Calculo de costo promedio de capital</b></h2>
         <br>
