--- a/html/flujofondos.html
+++ b/html/flujofondos.html
@@ -396,7 +396,7 @@
                     <td style="text-align:center">$ -</td>
                   </tr>
                   <tr class="warning">
-                    <th><i class="fa fa-plus-circle" aria-hidden="true"></i>Creditos recibidos</th>
+                    <th><i class="fa fa-plus-circle" aria-hidden="true"></i>Créditos recibidos</th>
                     <td style="text-align:center">$ -</td>
                     <td style="text-align:center">$ -</td>
                     <td style="text-align:center">$ -</td>
@@ -456,9 +456,9 @@
     </div>
       <br><br>
         <p class="lead"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Siendo: <br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;F<sub>i</sub> : El flujo de caja en el periodo i<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;n : El número de periodos <br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I : La inversión inicial<br></p>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;F<sub>i</sub> : Flujo de fondos en el periodo i<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;n : Número de periodos <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I : Inversión inicial<br></p>
        <hr class="featurette-divider">
       <!-- /END THE FEATURETTES -->
 
